--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="style.css">
+    <script src="code.js" defer></script>
+
     <title>rockPaperScissors</title>
 </head>
 <body>
-    <h1>Welcome to my first JS project!</h1>
-    <p>If you want to play Rock, Paper, Scissors press f12 and click on console option.</p>
+    <div class="content">
+        <div class="btns">
+            <div class="btnR" id="btnR">
+                <button>Rock</button>
+            </div>
+            <div class="btnP" id="btnP">
+                <button>Paper</button>
+            </div>
+            <div class="btnS" id="btnS">
+                <button>Scissors</button>
+            </div>
+        </div>
+        <div class="result" id="result"></div>
+    </div>
 </body>
 </html>
-
-<script src="code.js"></script>
